--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('../public/hurta2.jpg');
+  background-image: url('../public/white_background.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   margin: 0;
